--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
         "express": "4.17.1",
         "joi": "17.4.0",
         "jsonwebtoken": "8.5.1",
+        "luxon": "^1.26.0",
         "mongoose": "5.12.4",
         "passport": "0.4.1",
         "passport-jwt": "4.0.0",
