--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-redux": "7.2.3",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
+    "recharts": "^2.0.9",
     "redux": "4.0.5",
     "redux-persist": "6.0.0",
     "styled-components": "5.2.3",
