--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-responsive": "^8.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "4.3.0",
     "recharts": "^2.0.9",
     "redux": "4.0.5",
     "redux-persist": "6.0.0",
