--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,7 @@
     "axios": "0.21.1",
     "formik": "2.2.6",
     "react": "^17.0.2",
-    "react-datepicker": "3.8.0",
+    "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
     "react-google-login": "5.2.2",
     "react-loader-spinner": "^4.0.0",
