--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "0.21.1",
     "formik": "2.2.6",
+    "luxon": "1.26.0",
+    "moment": "2.29.1",
     "react": "^17.0.2",
     "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
