--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,8 @@
     "passport": "0.4.1",
     "passport-jwt": "4.0.0",
     "query-string": "7.0.0",
-    "swagger-ui-express": "4.1.6"
+    "swagger-ui-express": "4.1.6",
+    "uuid": "8.3.2"
   },
   "devDependencies": {
     "nodemon": "2.0.7"
