--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "4.0.3",
     "react-select": "4.3.0",
     "react-star-ratings": "^2.3.0",
+    "react-transition-group": "^2.9.0",
     "recharts": "^2.0.9",
     "redux": "4.0.5",
     "redux-persist": "6.0.0",
