--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "luxon": "1.26.0",
     "moment": "2.29.1",
     "react": "^17.0.2",
+    "react-animations": "^1.0.0",
     "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
     "react-google-login": "5.2.2",
