--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-animations": "^1.0.0",
     "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
+    "react-favicon": "0.0.22",
     "react-google-login": "5.2.2",
     "react-loader-spinner": "^4.0.0",
     "react-redux": "7.2.3",
